Now the project is usable

--- a/PlsGankMe.ipynb
+++ b/PlsGankMe.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import math\n",
     "import pickle\n",
-    "import statistics\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy\n",
@@ -20,12 +19,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "username = input(\"Enter your jungler username: \")"
+    "Comment the first line to collect new data."
    ]
   },
   {
@@ -35,8 +32,33 @@
    "outputs": [],
    "source": [
     "%%script false --no-raise-error\n",
-    "x_killPositions = pickle.load(open(\"x_killPositions.p\", \"rb\"))\n",
-    "y_killPositions = pickle.load(open(\"y_killPositions.p\", \"rb\"))\n",
+    "\n",
+    "username = input(\"Enter your jungler username: \")\n",
+    "region = input(\"Enter your region (default is euw1): \")\n",
+    "if region == \"\":\n",
+    "    region = \"euw1\"\n",
+    "minute = input(\"Enter the minute you want to check (default is 15): \")\n",
+    "if minute == \"\":\n",
+    "    minute = 15\n",
+    "else:\n",
+    "    minute = int(minute)\n",
+    "count = input(\"Enter the number of games you want to check (default is 100): \")\n",
+    "if count == \"\":\n",
+    "    count = 100\n",
+    "else:\n",
+    "    count = int(count)\n",
+    "start = input(\"Enter the start index of the games you want to check (default is 0): \")\n",
+    "if start == \"\":\n",
+    "    start = 0\n",
+    "else:\n",
+    "    start = int(start)\n",
+    "\n",
+    "try:\n",
+    "    x_killPositions = pickle.load(open(\"x_killPositions.p\", \"rb\"))\n",
+    "    y_killPositions = pickle.load(open(\"y_killPositions.p\", \"rb\"))\n",
+    "except:\n",
+    "    x_killPositions = []\n",
+    "    y_killPositions = []\n",
     "\n",
     "x_killPositions_aux,y_killPositions_aux = Gtb.get_kill_positions_by_name(username,start=0,count=100,minute=15,region='euw1')\n",
     "x_killPositions += x_killPositions_aux\n",
@@ -54,7 +76,10 @@
    "source": [
     "x_killPositions = pickle.load(open(\"x_killPositions.p\", \"rb\"))\n",
     "y_killPositions = pickle.load(open(\"y_killPositions.p\", \"rb\"))\n",
-    "tops,bots,other = Gtb.get_num_ganks_per_lane_per_game(x_killPositions,y_killPositions)"
+    "tops,bots,other = Gtb.get_num_ganks_per_lane_per_game(x_killPositions,y_killPositions)\n",
+    "\n",
+    "print(\"Ganks to top per game: \", tops)\n",
+    "print(\"Ganks to bot per game: \", bots)"
    ]
   },
   {
